# ganymede

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.cache/clangd/index/: benchmark_limit.cpp.BF69A2AA00599F62.idx  example_limit.cpp.636E694C63562D77.idx  example_market.cpp.37E9562A275411EF.idx  order.cpp.8A9E8008E66DD5D7.idx  order.hpp.80089704DB932CF0.idx  orderbook.cpp.855353872681DF28.idx  orderbook.hpp.B0697C5A73BDB10F.idx  snowflake.hpp.3906961B4F70F983.idx  trade.hpp.27C3FBAF872A0E1F.idx
benchmarks/: benchmark_limit.cpp  benchmark_market.cpp
examples/: example.cpp  example_limit.cpp  example_market.cpp
src/order/: order.cpp  order.hpp
src/orderbook/: orderbook.cpp  orderbook.hpp
src/snowflake/: snowflake.hpp
src/trade/: trade.hpp
tests/: test_limit_orders.cpp  test_market_orders.cpp
